--- a/WebUI/Pages/Shared/_Layout.cshtml
+++ b/WebUI/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand eshop-header-title" asp-area="" asp-page="/Index"><i class="fas fa-mobile-alt mr-2"></i>GMobile Shopping</a>
+                <a class="navbar-brand eshop-header-title" asp-area="" asp-page="/EShops/List"><i class="fas fa-mobile-alt mr-2"></i>GMobile Shopping</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
