Better new design.

--- a/WebUI/Pages/EShops/Edit.cshtml
+++ b/WebUI/Pages/EShops/Edit.cshtml
@@ -4,7 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit details for product with ID: @Model.Product.ProductID</h1>
+<div class="bg-farve-sort mb-2">
+    <h1 class="display-4">Edit details for product with ID: @Model.Product.ProductID</h1>
+</div>
+
 <div>
     <img src="~/Images/@Model.Product.ImageName" alt="Alternate Text" class="img-thumbnail my-4" />
 </div>
