--- a/WebUI/Pages/Shared/_Layout.cshtml
+++ b/WebUI/Pages/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark text-white border-bottom box-shadow mb-3 border-bottom-0">
             <div class="container">
-                <a class="navbar-brand eshop-header-title" asp-area="" asp-page="/EShops/List"><i class="fas fa-mobile-alt mr-2"></i>GMobile Shopping</a>
+                <a class="navbar-brand eshop-header-title" asp-area="" asp-page="/EShops/List"><span style="color: #d38a8a;"><i class="fas fa-mobile-alt mr-2"></i>GMobile Shopping</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,6 +26,7 @@
                         </li>
                     </ul>
                 </div>
+                <vc:product></vc:product>
             </div>
         </nav>
     </header>
