--- a/WebUI/wwwroot/css/myStyle.css
+++ b/WebUI/wwwroot/css/myStyle.css
@@ -3,28 +3,37 @@
     height: 100%;
     width: 100%;*/
     font-family: 'Segoe UI Light', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(120deg, #d0d0d0,#ffffff,#d2d2d2) center fixed no-repeat;
+    background: linear-gradient(120deg, #7b7b7b,#ffffff,#d2d2d2) center fixed no-repeat;
 }
 
 .eshop-header-title {
-    font: 400 25px/1.3 'Lobster Two', Helvetica, sans-serif;
+    font: 400 30px/1.3 'Lobster Two', Helvetica, sans-serif;
     color: #2b2b2b;
     text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 }
 
 .bg-farve-sort {
     /*background-color: #d2d2d2;*/
-    border-radius: 10px !important;
+    /*border-radius: 10px !important;*/
 }
 
 .bg-farve-hvid {
-    background-color: #e6e6e6;
+    background-color: #3131312e;
     border-radius: 10px;
 }
 
 .card {
-    border-radius: 10px;
+    border-radius: 9px;
     box-shadow: 0 0 1px 0 #1e2225;
+    transition: all .3s ease-in-out;
+}
+
+    .card:hover {
+        transform: scale(1.1);
+    }
+
+.card-footer {
+    background-color: #5d5d5d2e;
 }
 
 .card-img-top {
