--- a/WebUI/Pages/Shared/_Layout.cshtml
+++ b/WebUI/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Customers"><i class="fas fa-user-friends mr-2"></i>Customers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Products"><i class="fas fa-mobile-alt mr-2"></i>Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Brands"><i class="fab fa-ravelry mr-2"></i>Brands</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/ShoppingCart"><i class="fas fa-shopping-cart mr-2"></i>Shopping cart</a>
                         </li>
                     </ul>
@@ -36,9 +45,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-white">
         <div class="container">
-            &copy; 2019 - WebUI - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2019 - EShop - <span style="color: #d38a8a;">GMobile Shopping</span> by Robert-Iulian Zaharia
         </div>
     </footer>
 
