--- a/WebUI/Pages/Components/Product/Default.cshtml
+++ b/WebUI/Pages/Components/Product/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@model int
 <div>
-    There is <span class="color: #d38a8a;">@Model</span> products available.
+    There is <span style="color: #d38a8a;">@Model</span> products available.
 </div>
 
