--- a/WebUI/Pages/EShops/Detail.cshtml
+++ b/WebUI/Pages/EShops/Detail.cshtml
@@ -16,51 +16,52 @@
 <div>
     <h2>@Model.Product.Brand</h2>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            ID
-        </dt>
-        <dd class="col-sm-10">
+    <div class="row">
+        <div class="col-sm-3">
+            <h5 class="font-weight-bolder">ID</h5>
+        </div>
+        <div class="col-sm-9">
             @Model.Product.ProductID
-        </dd>
-        <dt class="col-sm-2">
-            Model
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Product.Model
-        </dd>
-        <dt class="col-sm-2">
-            Price
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Product.Price DKK
-        </dd>
-        <dt class="col-sm-2">
-            Date
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Product.Year
-        </dd>        
-        <dt class="col-sm-2">
-            Storage
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Product.Storage GB
-        </dd>        
-        <dt class="col-sm-2">
-            Material frame type
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Product.MaterialFrameType
-        </dd>        
-        <dt class="col-sm-2">
-            Description
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Product.Description
-        </dd>
-    </dl>
+        </div>
+        <div class="col-sm-3">
+            <h5 class="font-weight-bolder">Model</h5>
+        </div>
+        <div class="col-sm-9">
+            <h5>@Model.Product.Model</h5>
+        </div>
+        <div class="col-sm-3">
+            <h5 class="font-weight-bolder">Price</h5>
+        </div>
+        <div class="col-sm-9">
+            <h5>@Model.Product.Price DKK</h5>
+        </div>
+        <div class="col-sm-3">
+            <h5 class="font-weight-bolder">Date</h5>
+        </div>
+        <div class="col-sm-9">
+            <h5>@Model.Product.Year</h5>
+        </div>        
+        <div class="col-sm-3">
+            <h5 class="font-weight-bolder">Storage</h5>
+        </div>
+        <div class="col-sm-9">
+            <h5>@Model.Product.Storage GB</h5>
+        </div>        
+        <div class="col-sm-3">
+            <h5 class="font-weight-bolder">Material frame type</h5>
+        </div>
+        <div class="col-sm-9">
+            <h5>@Model.Product.MaterialFrameType</h5>
+        </div>        
+        <div class="col-sm-3">
+            <h5 class="font-weight-bolder">Description</h5>
+        </div>
+        <div class="col-sm-9">
+            <h5>@Model.Product.Description</h5>
+        </div>
+    </div>
 </div>
+<br />
 
 <div>
     <a class="btn btn-primary" asp-page="./List"><i class="fas fa-arrow-left mr-2"></i>Go back to list</a>
