--- a/WebUI/Pages/EShops/_Summary.cshtml
+++ b/WebUI/Pages/EShops/_Summary.cshtml
@@ -1,30 +1,31 @@
 ﻿@using ServiceLayer.ProductService.ProductDto
 @model ProductListDto
 
-<div class="col-sm-3">
-    <div class="card my-4">
-        <img class="card-img-top p-4" src="~/Images/@Model.ImageName">
+<div class="col-xl-4">
+    <div class="card my-5">
+        <img class="card-img-top p-5" src="~/Images/@Model.ImageName">
         <div class="card-body">
             <h2 class="card-title font-weight-bolder">@Model.Brand</h2>
             <hr />
             <p class="card-text h5"><span class="font-weight-bolder">Model: </span>@Model.Model</p>
             <p class="card-text h5"><span class="font-weight-bolder">Price: </span>@Model.Price DKK</p>
+            <p class="card-text h5"><span class="font-weight-bolder">Storage: </span>@Model.Storage GB</p>
             <br />
             <div class="form-inline justify-content-center">
-                <button class="btn btn-dark mr-2">
+                <button class="btn btn-outline-dark mr-2">
                     <i class="fas fa-cart-plus mr-2"></i>Add to cart
                 </button>
+                <a class="btn btn-outline-dark mr-2" asp-page="./Detail" asp-route-ProductID="@Model.ProductID">
+                    <i class="fas fa-list-ul mr-2"></i>More details
+                </a>
             </div>
         </div>
         <div class="card-footer bg-farve-sort form-inline justify-content-center">
-            <a class="btn btn-outline-dark mr-2" asp-page="./Detail" asp-route-ProductID="@Model.ProductID">
-                <i class="fas fa-list-ul"></i>
+            <a class="btn btn-dark mr-2" asp-page="./Edit" asp-route-ProductID="@Model.ProductID">
+                <i class="far fa-edit mr-2"></i>Edit
             </a>
-            <a class="btn btn-outline-dark mr-2" asp-page="./Edit" asp-route-ProductID="@Model.ProductID">
-                <i class="far fa-edit"></i>
-            </a>
-            <a class="btn btn-outline-danger" asp-page="./Delete" asp-route-ProductID="@Model.ProductID">
-                <i class="far fa-trash-alt"></i>
+            <a class="btn btn-danger" asp-page="./Delete" asp-route-ProductID="@Model.ProductID">
+                <i class="far fa-trash-alt mr-2"></i>Remove
             </a>
         </div>
     </div>
