--- a/WebUI/Pages/EShops/_SummaryProducts.cshtml
+++ b/WebUI/Pages/EShops/_SummaryProducts.cshtml
@@ -3,13 +3,13 @@
 
 <div class="col-xl-4">
     <div class="card my-5">
-        <img class="card-img-top p-5" src="~/Images/@Model.ImageName">
+        <img class="card-img-top p-5" src="~/Images/ProductImages/@Model.ImageName">
         <div class="card-body">
             <h2 class="card-title font-weight-bolder">@Model.Brand</h2>
             <hr />
             <p class="card-text h5"><span class="font-weight-bolder">Model: </span>@Model.Model</p>
             <p class="card-text h5"><span class="font-weight-bolder">Price: </span>@Model.Price DKK</p>
-            <p class="card-text h5"><span class="font-weight-bolder">Storage: </span>@Model.Storage GB</p>
+            <p class="card-text h5"><span class="font-weight-bolder">Color: </span>@Model.Color</p>
             <br />
             <div class="form-inline justify-content-center">
                 <button class="btn btn-outline-dark mr-2">
