--- a/WebUI/Pages/Shared/_Layout.cshtml
+++ b/WebUI/Pages/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark text-white border-bottom box-shadow mb-3 border-bottom-0">
             <div class="container">
-                <a class="navbar-brand eshop-header-title" asp-area="" asp-page="/EShops/List"><span style="color: #d38a8a;"><i class="fas fa-mobile-alt mr-2"></i>GMobile Shopping</span></a>
+                <a class="navbar-brand eshop-header-title" asp-area="" asp-page="/EShops/Products"><span style="color: #d38a8a;"><i class="fas fa-mobile-alt mr-2"></i>GMobile Shopping</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Customers"><i class="fas fa-user-friends mr-2"></i>Customers</a>
+                            <a class="nav-link text-white navbar-foreground-color" asp-area="" asp-page="/EShops/Customers"><i class="fas fa-user-friends mr-2"></i>Customers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Products"><i class="fas fa-mobile-alt mr-2"></i>Products</a>
+                            <a class="nav-link text-white navbar-foreground-color" asp-area="" asp-page="/EShops/Products"><i class="fas fa-mobile-alt mr-2"></i>Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Brands"><i class="fab fa-ravelry mr-2"></i>Brands</a>
+                            <a class="nav-link text-white navbar-foreground-color" asp-area="" asp-page="/EShops/Brands"><i class="fab fa-ravelry mr-2"></i>Brands</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/ShoppingCart"><i class="fas fa-shopping-cart mr-2"></i>Shopping cart</a>
+                            <a class="nav-link text-white navbar-foreground-color" asp-area="" asp-page="/EShops/ShoppingCart"><i class="fas fa-shopping-cart mr-2"></i>Shopping cart</a>
                         </li>
                     </ul>
                 </div>
