--- a/WebUI/wwwroot/css/myStyle.css
+++ b/WebUI/wwwroot/css/myStyle.css
@@ -7,15 +7,19 @@
 }
 
 .eshop-header-title {
-    font: 400 30px/1.3 'Lobster Two', Helvetica, sans-serif;
+    font: 400 32px/1.3 'Lobster Two', Helvetica, sans-serif;
     color: #2b2b2b;
     text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
 }
 
-.bg-farve-sort {
-    /*background-color: #d2d2d2;*/
-    /*border-radius: 10px !important;*/
+.navbar-foreground-color{
+    color: #fff!important;
+    transition: all .3s ease-in-out!important;
 }
+
+    .navbar-foreground-color:hover {
+        color: #d38a8a!important;
+    }
 
 .bg-farve-hvid {
     background-color: #3131312e;
@@ -38,6 +42,8 @@
 
 .card-img-top {
     border-radius: 10px !important;
+    width: 100%;
+    height: 100%;
 }
 
 .footer {
