--- a/WebUI/Pages/EShops/_SummaryProducts.cshtml
+++ b/WebUI/Pages/EShops/_SummaryProducts.cshtml
@@ -22,10 +22,7 @@
         </div>
         <div class="card-footer bg-farve-sort form-inline justify-content-center">
             <a class="btn btn-dark mr-2" asp-page="./Edit" asp-route-ProductID="@Model.ProductID">
-                <i class="far fa-edit mr-2"></i>Edit
-            </a>
-            <a class="btn btn-danger" asp-page="./Delete" asp-route-ProductID="@Model.ProductID">
-                <i class="far fa-trash-alt mr-2"></i>Remove
+                <i class="far fa-edit mr-2"></i>Edit this products
             </a>
         </div>
     </div>
